# tldr

./: .gitignore  README.md  example.py  pyproject.toml  setup.sh  test_api.py
tldr/: __init__.py  cli.py  youtube_summarizer.py
tldr/core/: __init__.py  audio_extractor.py  downloader.py  extractor.py  segmenter.py  transcriber.py
webapp/: Dockerfile  README.md  docker-compose.yml  main.py  run.py
webapp/static/: style.css
webapp/templates/: index.html
