[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tldr"
version = "0.1.0"
dependencies = [
    "yt-dlp>=2025.06.25",
    "ffmpeg-python>=0.2.0",
    "faster-whisper>=0.10.0",
    "openai>=1.0.0",
    "numpy<2", # pin to numpy 1.x
    "dotenv>=0.9.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tldr*"]
exclude = ["downloads*", "audio*"]
